# users-chat-API

./: .gitignore  LICENSE  Makefile  README.md  TODO  database.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
apps/: urls.py
apps/chats/: filter.py  urls.py
apps/chats/migrations/: 0001_initial.py  0002_initial.py
apps/chats/models/: __init__.py  chat.py
apps/chats/serializers/: chat.py
apps/chats/utils/: jwt_auth_middleware_stack.py
apps/chats/views/: chat.py
apps/chats/ws/: consumers.py  routing.py
apps/shared/: tokens.py
apps/shared/django/: email.py  emails.py  models.py  serializers.py  upload_images.py  validators.py
apps/shared/rest_framework/: pagination.py
apps/users/: forms.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_image.py  0002_alter_user_is_active.py  0002_user_bio_user_image.py  0002_user_is_online.py  0003_alter_user_image_alter_user_is_active.py  0003_alter_user_username.py  0004_alter_user_image.py  0004_alter_user_username.py
apps/users/models/: user.py
apps/users/serializers/: __init__.py  activation.py  auth.py  user.py
apps/users/templates/: activate.html  activation.html  base.html  reset-password.html
apps/users/templates/password/: new-password.html
apps/users/utils/: upload_images.py
apps/users/views/: __init__.py  activate.py  activation.py  auth.py  user.py
root/: asgi.py  settings.py  urls.py
