[tool.poetry]
name = "users-chat-api"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
drf-yasg = {extras = ["validation"], version = "^1.21.7"}
pillow = "^10.1.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.0"}
httpx = "^0.25.2"
six = "^1.16.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
ujson = "^5.8.0"
fcm-django = "^2.0.0"
channels-redis = "^4.1.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
